--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,10 @@
   "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.3.1",
     "net": "^1.0.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
